fix: Fix z-index

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -275,7 +275,7 @@
   border-radius: 9999px;
   filter: blur(130px);
   opacity: 0.75;
-  z-index: 0;
+  z-index: -1;
   animation: aurora 18s ease-in-out infinite;
 }
 
